--- a/2. Docker-Demo/docker-compose.yml
+++ b/2. Docker-Demo/docker-compose.yml
@@ -1,18 +1,22 @@
-version: '3.3'
+version: '3.1'
+
 services:
-  db:
-    image: arm64v8/mysql:oracle
+  app:
+    image: app
+    build: .
     ports:
-      - "3306:3306"
-    command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_bin', '--default-authentication-plugin=mysql_native_password']
+      - "8080:8080"
     environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD="yes"
-      - MYSQL_DATABASE=myDB
-  docker-demo:
-    image: thearcher00/docker-demo:v1
+      MYSQL_HOST: localhost
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 123
+      MYSQL_PORT: 3307
+  mysqldb:
+    image: mysql
     ports:
-      - "8080:8080" # web ui
+      - "3307:3307"
     environment:
-      - MYSQL_HOST=db
-      - MYSQL_USER=root
+      MYSQL_DATABASE: test
+      MYSQL_ROOT_PASSWORD: 123
+
 
