--- a/2. Docker-Demo/src/main/resources/application.properties
+++ b/2. Docker-Demo/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/battle_ships?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/test?enabledTLSProtocols=TLSv1.2
 spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:}
+spring.datasource.password=${MYSQL_PASSWORD:123}
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql = TRUE
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create
 
-###Logging Levels
-# Disable the default loggers
-logging.level.org = WARN
-logging.level.blog = WARN
-
-#Show SQL executed with parameter bindings
-logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type.descriptor = TRACE
